src/css/navbar-main.css
.nav-main {
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
    padding: 15px 25px 15px 15px;
    background-color: #7697A0;
}

.nav-links {
    display: flex;
    flex-direction: row;
    font-weight: bold;
}
.about{
    margin-right: 55rem;
}

a:link {
    text-decoration: none;
    color: black;
}

a:visited {
    color: black;
}

a:hover {
    text-decoration: underline;
}

.nav-dropdown:active {
    background-color: #7697A0;
}

.logo{
    max-width: 95%;
    max-height: 150px;
}

.search-bar{
    padding-right: 50px;
    padding-left: 10px;
}

/* #hamburger{
    margin: 0 40px, 0 0;
    line-height: 70px;
    display: none;
}

#toggle{
    display: none;
} */


/* @media screen and (max-width: 1039.2px){
    #hamburger{
        display: flex;
        position: absolute;
        top: 0px;
        right: 30px;
        cursor: pointer;
        width: 26px;
        float: right;
        font-size: 45px;
    }
    .menu{
        position: absolute;
        top: 0;
        left: 0;
        margin-top: 68px;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 100%;
    }
    
    #toggle:checked ~ .menu{
        border: 1px solid #333;
        height: 2.5em;
        padding: 0.5em;
        display: none;
      }
      .menu > a {
        display: flex;
        justify-content: center;
        margin: 0;
        padding: 0.5em 0;
        width: 100%;
        color: white;
        background-color: #222;
        opacity: 95%;
      }
} */

